# pare

./: .gitignore  README.md  benchmark_coverage.sh  download_just.sh  eval_coverage_json.py  file_samples.sh  justfile  optimization.py  parse_coverage_json.py  refactor.py  requirements.txt  run_benchmark.sh  validate_results.py
code_remover/: Cargo.toml  config.toml  example.cpp.orig
code_remover/src/: analysis.rs  main.rs  remover.rs  remover_config.rs
creduce/: interestingness_test.sh
docs/: parser_notes.md
eval_results/: out_func_usage.csv
gen_coverage/: Cargo.toml  __init__.py  __main__.py  benchmark.py  config.py  fastcov.py  gcov.py  utils.py
gen_coverage/src/: args.rs  main.rs  multiwriter.rs  types.rs
gen_coverage/src/db/: init.rs  mod.rs
gen_coverage/src/runner/: cvc5.rs  gcov.rs  mod.rs  run.rs  worker.rs
optimization/: evaluate_sol.cpp  main.cpp  optimization.py  requirements.txt  test.py  util.cpp  util.h
rust/: Cargo.toml  build_native.sh  build_static.sh
rust/src/: args.rs  benchmark.rs  db.rs  fastcov.rs  gcov.rs  gcov_worker.rs  main.rs  types.rs  utils.rs  worker.rs
rust/src/db/: init.rs  mod.rs  stmts.rs
rust/src/runner/: cvc5.rs  gcov.rs  mod.rs  worker.rs
utils/: create_bar_chart.py  create_debloated_cores.sh  evaluate.sh  evaluate_finetuned.sh  visualize_function_length.py  visualize_function_length_distribution.py
