[package]
name = "gen_coverage"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam = "0.8.4"
ctrlc = "3.4.5"
dur = "0.5.3"
env_logger = "0.11.5"
glob = "0.3.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
itertools = "0.13.0"
log = "0.4.22"
mktemp = "0.5.1"
once_cell = "1.20.2"
rand = "0.8.5"
rayon = "1.10.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"

[profile.release]
opt-level = 3          
lto = "fat"               
codegen-units = 1     
panic = "abort"
debug = false   
