[package]
name = "gen_coverage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
fern = "0.6.2"
glob = "0.3.1"
itertools = "0.13.0"
log = "0.4.22"
mktemp = "0.5.1"
once_cell = "1.20.2"
rand = "0.8.5"
rayon = "1.10.0"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
